LIST OF CHANGES
---------------

 - Removing Tidyp dependency from CI

release 68.2.0
 - Added '--process_separately_lanes' to the pipeline to explicitly exclude
   multiple lanes from a merge.
 - Generalised dir_path method in npg_pipeline::product. This fixed a bug in
   npg_run_is_deletable, which manifested in wrong expectations about the
   directory tree for partially merged run data. 
 - Dropped a check for DRAGEN analysis data from npg_run_is_deletable.
 - Removed unnecessary tests from t/10-pluggable-central.t

release 68.1.0
 - Apply changes to the code and tests, which follow from removing some
   functionality from npg_tracking::illumina::runfolder, see
   https://github.com/wtsi-npg/npg_tracking/pull/807. The pipeline retains
   all its previous functionality.

release 68.0.0
 - Use st::api::lims->aggregate_libraries() method for both 'merge_lanes' and
   'merge_by_library' pipeline options. This is a breaking change as far as
   archival and deletion of NovaSeq Standard workflow data is concerned.
   Key change for lane merging for this data will be that tag 0 and tag 888 will
   not be merged across the lanes.
   The NovaSeq Standard workflow, where there is only one input port, is
   different to the more general merging across lanes where the (claimed) same
   library has been sequenced. But this is not a valid reason to maintain separate
   code.
 - Deletable shadow folders are detected, but not considered as deletable
   for now. They are flagged in the log of the 'npg_run_is_deletable' script.
 - Removed all code that was used for the UKB project and the upload of Heron
   project data to CLIMB. Updated the archival pipeline function graph and its
   graphical representation.
    - Removed 'cache_merge_component' and 'archive_to_s3' pipeline functions.
    - Removed all functions for retrieving the QC state of the product
      from 'npg_pipeline::product'.
    - Dropped npg_pipeline::base dependency on QC database ('qc_schema'